# hpc_project

./: CMakeLists.txt  LICENSE  README.md  install.sh
include/: Matrix.hpp  MpiRoutines.hpp  MpiWrapper.hpp  Params.hpp  constants.hpp  linalg.hpp  utils.hpp
src/: HPC.cpp
